@@ -190,6 +190,15 @@ Resource Collection</a>s are used to
           </td>
           <td valign="top" align="center">No</td>
         </tr>
+        <tr>
+          <td valign="top">resourcename</td>
+          <td valign="top">
+          <em>Since Ant 1.8.3</em>
+            Specifies the name reported if this task is exposed
+            as a <a href="../Types/resources.html">resource</a>.
+          </td>
+          <td valign="top" align="center">No</td>
+        </tr>
 
       </table>
 
